bug(story section): fixed bg image overlapping the text on smaller screen

--- a/css/style.css
+++ b/css/style.css
@@ -88,6 +88,7 @@ body {
     display: flex;
     flex-direction: column;
     color: #fff;
+    z-index: 1;
 }
 
 .text-description {
